# N00B

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SPEC-CPU2006-gcc-ggc-page-striptop.patch  SPEC-CPU2017-gcc-ggc-page-striptop.patch  TODO.md  config.h.in  gcc-cse.patch  noobclang  noobclang++  noobconfig.cmake  spec2006_rss_report.py  spec2017_rss_report.py  spec_rss_report.py
allocator/: CMakeLists.txt  custom_allocator_wrapper.cpp  malloc_wrapper.cpp  nooballoc.cpp  nooballoc.h  test.cpp
include/NOOB/: config.h  memlayout.h
llvm-plugin/: CMakeLists.txt  lld.AArch64.ld  lld.x86-64.ld  llvm_noob.cpp  llvm_noob.h  llvm_noob_plugin.cpp  radix_decoder.cpp  run_llvm_noob.cpp  track_base_ptr.cpp
llvm-plugin/llvm-utils/: .gitignore  CMakeLists.txt  README.md  util.cpp
llvm-plugin/llvm-utils/addressability/: CMakeLists.txt  addressability.cpp  pointer_escapes.cpp  wrap_addresstaken_funcs.cpp
llvm-plugin/llvm-utils/breakconstantgeps/: BreakConstantGEPs.cpp  CMakeLists.txt
llvm-plugin/llvm-utils/callsiteanalysis/: CMakeLists.txt  callsiteanalysis.cpp
llvm-plugin/llvm-utils/compileOTF/: CMakeLists.txt  compileOTF.cpp
llvm-plugin/llvm-utils/include/llvm-utils/: util.h
llvm-plugin/llvm-utils/include/llvm-utils/addressability/: addressability.h
llvm-plugin/llvm-utils/include/llvm-utils/breakconstantgeps/: BreakConstantGEPs.h
llvm-plugin/llvm-utils/include/llvm-utils/callsiteanalysis/: callsiteanalysis.h
llvm-plugin/llvm-utils/include/llvm-utils/compileOTF/: compileOTF.h
llvm-plugin/llvm-utils/include/llvm-utils/instrpointoptimization/: dominationpruning.h  hoistloopmemaccesses.h  instrumentationpoint.h
llvm-plugin/llvm-utils/include/llvm-utils/pointerdetection/: pointerdetection.h
llvm-plugin/llvm-utils/include/llvm-utils/reachability/: cfg_reachability.h  reachingdefinitions.h  sparse_reachability_graph.h
llvm-plugin/llvm-utils/include/llvm-utils/safetyanalysis/: allocationbounds.h  safetyanalysis.h
llvm-plugin/llvm-utils/instrpointoptimization/: CMakeLists.txt  domination_pruning.cpp  loopoptimizations.cpp
llvm-plugin/llvm-utils/pointerdetection/: .gitignore  CMakeLists.txt  pointerdetector.cpp  pointerqueries.cpp  sillyperlanalysis.cpp
llvm-plugin/llvm-utils/reachability/: CMakeLists.txt  reachingdefinitions.cpp
llvm-plugin/llvm-utils/safetyanalysis/: CMakeLists.txt  allocationbounds.cpp  boundschecker.cpp  passrunner.cpp  safetyanalysis.cpp
n00bloader/: .gitignore  CMakeLists.txt  README.md
n00bloader/src/: .gitignore  loader.c  z_printf.c  z_syscalls.c  z_syscalls.h  z_utils.h
n00bloader/src/amd64/: z_start.S  z_syscall.S  z_trampo.S
patches/: SPEC-CPU2006-gcc-init_alias_analysis-reg_known_value-r79945.patch
results/: .gitignore  aurora-ffmpeg-fps.csv  aurora-spec-rss-text.csv  aurora-spec-rt.csv  devo-spec-rss-text.csv  devo-spec-rt.csv  devo-spec.csv  devo-spec06.csv  generate_rss_table.py  officeboi-spec-rss-text.csv  officeboi-spec-rt.csv  officeboi-spec.csv  officeboi-spec06.csv  plot_combined_results.py  plot_ffmpeg_bars.py  plot_results.py  plot_rt_results.py  puffin-spec-rss-text.csv  puffin-spec.csv  puffin-spec06.csv  trinity-spec-rss-text.csv  trinity-spec-rt.csv  trinity-spec.csv  trinity-spec06.csv
scripts/: enable-UAI.sh  format_video_benchmarks.py  run_pts_ffmpeg.sh  spec2006_report.py  spec2006_rss_report.py  spec2017_report.py  spec2017_rss_report.py  spec_report_utils.py  test-LAM.cpp
templates/: CMakeLists.txt  config.h.in  noobclang  spec06-clang15-lto-aarch64.cfg  spec06-clang15-lto-x86_64.cfg  spec17-clang15-lto-aarch64.cfg  spec17-clang15-lto-x86_64.cfg
templates/spec06/: CMakeLists.txt  clang15-lto-aarch64.cfg
test/: .gitignore  test.c
